@@ -1,0 +1,15 @@
+#
+# my simple makefile act as something like a user interface
+#
+
+all::
+	@echo Cheers
+
+deploy:
+	(cp ambient_data.db /var/run/ambient_data.db)
+
+clean::
+	rm -f *~
+	rm -f .*~
+
+distclean: clean
