@@ -1,0 +1,15 @@
+The skeleton database
+=====================
+
+This modul contains a skeleton database for installation on the device.
+
+
+Useful commands
+---------------
+
+	.quit
+	.databases
+	.open
+	.read ambient_data.sql
+	.tables
+	SELECT * FROM AmbientValues;  <- don`t forget the semicolon
