@@ -3,6 +3,10 @@
 #
 
 
+
+2021-06-06 -> ## amtrack && repo stuff
+              add first sqlite content
+
 2021-06-03 -> ## amtrack stuff
               add some debugging info
 
